T672 - T673: Transaction Requests (#53)
* Add transaction_request.create endpoint

* Add TransactionRequest to Swagger

* Replace balance_address with address in tests

* Add status

* Refactor Transaction Request creation

* Return transfer after creation

* Implement initial Consumption logic

* Add tests for transaction request consumption and fix failures

* Split the transaction consumption into a new controller

* Simplify controllers by extracting logic

* Add test names and idempotency check

* Add consumption and request tests

* Add tests for consumption view

* Add get transaction request in swagger

* Unify returned data for get functions

* Add Swagger doc for Consume

* Add specs for consumption/request

* Send back full minted token in consumption

* Test what happens when amount are not set for request AND consumption

* Change status of transaction request to valid/expired

* Handle idempotency for consumptions

* Fix test naming

* Sort factory aliases in alphabetical order
